--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.4",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "postcss-import": "^14.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.1",
+    "react-hot-toast": "^1.0.2",
+    "react-loader-spinner": "^4.0.0",
+    "react-paginate": "^7.0.0",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-switch": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^3.1.0",
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build:tailwind": "postcss src/assets/tailwind.css -o src/assets/output.css",
+    "watch:tailwind": "postcss -w src/assets/tailwind.css -o src/assets/output.css",
+    "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
+    "start:react": "react-scripts start",
+    "prebuild": "npm-run-all build:tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +55,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "redux-devtools-extension": "^2.13.8",
+    "tailwindcss": "^2.0.2"
   }
 }
